--- a/src/app/pages/lots/lots.html
+++ b/src/app/pages/lots/lots.html
@@ -74,10 +74,10 @@
     </div>
 }
 
-<p-confirmDialog></p-confirmDialog>
+<p-confirmDialog class="no-print"></p-confirmDialog>
 
 @if (loadingInvoice) {
-    <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 no-print">
         <div class="bg-white p-6 rounded-lg flex items-center gap-3">
             <i class="fa fa-spinner fa-spin text-blue-500"></i>
             <span>Loading invoice details...</span>
