--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,21 +22,29 @@
 
 @media print {
   @page {
-    margin: 5mm;
+    margin: 1mm;
     size: A4;
   }
   
   body * {
     visibility: hidden;
   }
-
-  #invoiceContent,
-  #invoiceContent * {
+  
+  #invoice,
+  #invoice * {
     visibility: visible !important;
-    width: 100% !important;
     -webkit-print-color-adjust: exact !important;
     color-adjust: exact !important;
     print-color-adjust: exact !important;
+  }
+  
+  #invoice {
+    position: absolute !important;
+    left: 0 !important;
+    top: 0 !important;
+    width: 100% !important;
+    height: auto !important;
+    overflow: visible !important;
   }
   
   #inner-container {
@@ -46,22 +54,16 @@
   #main-container {
     padding: 0px !important;
   }
-  
-  #invoiceContent {
-    position: absolute !important;
-    left: 0 !important;
-    top: 0 !important;
-    width: 100% !important;
-    height: auto !important;
-    max-height: none !important;
-    overflow: visible !important;
-    transform: none !important;
-    margin: 0 !important;
-    background: white !important;
-  }
 
   body {
     background: white !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  
+  html {
+    margin: 0 !important;
+    padding: 0 !important;
   }
   
   .no-print {
@@ -160,60 +162,4 @@
 table {
   table-layout: auto;
   width: 100%;
-}
-
-table th.w-lot-column-20,
-table td.w-lot-column-20 {
-  width: 20px !important;
-  min-width: 20px !important;
-  max-width: 20px !important;
-}
-
-table th.w-lot-column-30,
-table td.w-lot-column-30 {
-  width: 30px !important;
-  min-width: 30px !important;
-  max-width: 30px !important;
-}
-
-table th.w-lot-column-40,
-table td.w-lot-column-40 {
-  width: 40px !important;
-  min-width: 40px !important;
-  max-width: 40px !important;
-}
-
-table th.w-lot-column-50,
-table td.w-lot-column-50 {
-  width: 50px !important;
-  min-width: 50px !important;
-  max-width: 50px !important;
-}
-
-table th.w-lot-column-70,
-table td.w-lot-column-70 {
-  width: 70px !important;
-  min-width: 70px !important;
-  max-width: 70px !important;
-}
-
-table th.w-lot-column-90,
-table td.w-lot-column-90 {
-  width: 90px !important;
-  min-width: 90px !important;
-  max-width: 90px !important;
-}
-
-table th.w-lot-column-150,
-table td.w-lot-column-150 {
-  width: 150px !important;
-  min-width: 150px !important;
-  max-width: 150px !important;
-}
-
-table th.w-lot-column-200,
-table td.w-lot-column-200 {
-  width: 200px !important;
-  min-width: 200px !important;
-  max-width: 200px !important;
 }
