--- a/src/app/pages/species/species-list/species-list.html
+++ b/src/app/pages/species/species-list/species-list.html
@@ -1,5 +1,9 @@
 <app-header title="">
     <div actions class="flex gap-2 items-end">
+        <div class="flex flex-col">
+            <label class="text-xs mb-1">Search</label>
+            <input pInputText type="text" [(ngModel)]="searchTerm" (keyup.enter)="loadData()" placeholder="Search species" />
+        </div>
         <p-button
                 size="small"
                 label="Add Species"
@@ -13,7 +17,10 @@
         [value]="species"
         [loading]="loading"
         [paginator]="true"
-        [rows]="10"
+        [rows]="rowsPerPage"
+        [totalRecords]="totalRecords"
+        [lazy]="true"
+        (onLazyLoad)="onPageChange($event)"
         [showCurrentPageReport]="true"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
 
