--- a/src/app/pages/manage/vehicles/vehicles.html
+++ b/src/app/pages/manage/vehicles/vehicles.html
@@ -8,7 +8,7 @@
   </div>
 </app-header>
 
-<p-table [value]="vehicles" [loading]="loading" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+<p-table [value]="vehicles" [loading]="loading" [paginator]="true" [rows]="rowsPerPage" [totalRecords]="totalRecords" [lazy]="true" (onLazyLoad)="onPageChange($event)" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
   <ng-template pTemplate="header">
     <tr>
       <th>Vehicle Details</th>
