--- a/src/app/pages/clients/clients-list/clients-list.html
+++ b/src/app/pages/clients/clients-list/clients-list.html
@@ -26,8 +26,8 @@
 
     <ng-template pTemplate="header">
         <tr>
-            <th>Name</th>
-            <th>Email</th>
+            <th>Name <i class="fa fa-filter text-gray-400 ml-1"></i></th>
+            <th>Email <i class="fa fa-filter text-gray-400 ml-1"></i></th>
             <th>Mobile</th>
             <th>Address</th>
             <th>Status</th>
