--- a/src/app/pages/manage/vehicle-compartments/vehicle-compartments.html
+++ b/src/app/pages/manage/vehicle-compartments/vehicle-compartments.html
@@ -11,8 +11,8 @@
 <p-table [value]="vehicleCompartments" [loading]="loading" [paginator]="true" [rows]="rowsPerPage" [totalRecords]="totalRecords" [lazy]="true" (onLazyLoad)="onPageChange($event)" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
   <ng-template pTemplate="header">
     <tr>
-      <th>Name</th>
-      <th style="width: 10rem">Size</th>
+      <th>Name <i class="fa fa-filter text-gray-400 ml-1"></i></th>
+      <th style="width: 10rem">Size <i class="fa fa-filter text-gray-400 ml-1"></i></th>
       <th style="width: 8rem">Action</th>
     </tr>
   </ng-template>
