--- a/src/app/pages/manage/vehicle-types/vehicle-types.html
+++ b/src/app/pages/manage/vehicle-types/vehicle-types.html
@@ -11,7 +11,7 @@
 <p-table [value]="vehicleTypes" [loading]="loading" [paginator]="true" [rows]="rowsPerPage" [totalRecords]="totalRecords" [lazy]="true" (onLazyLoad)="onPageChange($event)" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
   <ng-template pTemplate="header">
     <tr>
-      <th>Name</th>
+      <th>Name <i class="fa fa-filter text-gray-400 ml-1"></i></th>
       <th style="width: 8rem">Action</th>
     </tr>
   </ng-template>
