--- a/src/app/pages/species/species-list/species-list.html
+++ b/src/app/pages/species/species-list/species-list.html
@@ -26,7 +26,7 @@
 
     <ng-template pTemplate="header">
         <tr>
-            <th>Name</th>
+            <th>Name <i class="fa fa-filter text-gray-400 ml-1"></i></th>
             <th>Category</th>
             <th>Status</th>
             <th style="width: 6rem">Actions</th>
