--- a/src/app/pages/species/species-categories/species-categories.html
+++ b/src/app/pages/species/species-categories/species-categories.html
@@ -29,7 +29,7 @@
     <ng-template pTemplate="header">
         <tr>
             <th>Name <i class="fa fa-filter text-gray-400 ml-1"></i></th>
-            <th>Actions</th>
+            <th style="width: 6rem">Actions</th>
         </tr>
     </ng-template>
 
