--- a/src/app/pages/lots/lots.html
+++ b/src/app/pages/lots/lots.html
@@ -1,5 +1,5 @@
 @if (!showInvoiceView) {
-    <app-header title="Lots">
+    <app-header pageTitle="Lots">
         <div actions class="flex gap-2 items-end">
             <div class="flex flex-col">
                 <label class="text-xs mb-1">Auction</label>
