--- a/src/app/pages/auctions/auctions.html
+++ b/src/app/pages/auctions/auctions.html
@@ -1,4 +1,4 @@
-<app-header title="Auctions">
+<app-header pageTitle="Auctions">
     <div actions class="flex gap-2 items-end">
         <div class="flex flex-col">
             <label class="text-xs mb-1">Auction Date</label>
