--- a/src/app/pages/buyers/buyers.html
+++ b/src/app/pages/buyers/buyers.html
@@ -1,4 +1,4 @@
-<app-header title="Buyers">
+<app-header pageTitle="Buyers">
     <div actions class="flex gap-2 items-end">
         <div class="flex flex-col">
             <label class="text-xs mb-1">Auction</label>
@@ -14,13 +14,14 @@
     </div>
 </app-header>
 
-<p-table [value]="rows" [loading]="loading" [paginator]="rows.length > 0" [rows]="rowsPerPage" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+<p-table [value]="rows" [loading]="loading" [paginator]="true" [rows]="rowsPerPage" [totalRecords]="totalRecords" [lazy]="true" (onLazyLoad)="onPageChange($event)" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
     <ng-template pTemplate="header">
         <tr>
             <th>Name <i class="fa fa-filter text-gray-400 ml-1"></i></th>
             <th style="width: 10rem">Bid No</th>
             <th style="width: 10rem">Value Allocated</th>
             <th style="width: 10rem">Status</th>
+            <th style="width: 8rem">Actions</th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-row>
@@ -45,11 +46,14 @@
                     <span class="text-orange-600">{{ row.buyer_info_status }}</span>
                 }
             </td>
+            <td>
+                <p-button icon="fa fa-file-invoice-dollar" pTooltip="Create Invoice" tooltipPosition="left" size="small" (onClick)="createInvoice(row)"></p-button>
+            </td>
         </tr>
     </ng-template>
     <ng-template pTemplate="emptymessage">
         <tr>
-            <td colspan="4">No buyers found</td>
+            <td colspan="5">No buyers found</td>
         </tr>
     </ng-template>
 </p-table>
