--- a/src/app/pages/manage/vehicles/vehicles.html
+++ b/src/app/pages/manage/vehicles/vehicles.html
@@ -1,4 +1,4 @@
-<app-header title="">
+<app-header pageTitle="">
   <div actions class="flex gap-2 items-end">
     <div class="flex flex-col">
       <label class="text-xs mb-1">Search</label>
